--- a/DigitalForensicsGame/src/Frontend/Main.html
+++ b/DigitalForensicsGame/src/Frontend/Main.html
@@ -27,8 +27,23 @@ body {
 <p><div class="h1"><b>Digital Forensics Game</b></p>
 
 <p>
-<a href="Start.html">
-<button class="button" style="background-color: #8FBF77";>Start Game
+<label for="players">Players</label>
+<input type="text" id="players" style="background-color: #FFFFFF";>
+</button>
+</a>
+</p>
+
+<p>
+<label for="scenario1">Play scenario 1</label>
+<a href="Scenario1.html">
+<button class="button" id="scenario1" style="background-color: #8FBF77";>Play
+</button>
+</a>
+</p>
+<p>
+<label for="scenario2">Play scenario 2</label>
+<a href="Scenario2.html">
+<button class="button" id="scenario2" style="background-color: #8FBF77";>Play
 </button>
 </a>
 </p>
