--- a/DigitalForensicsGame/src/Frontend/Main.html
+++ b/DigitalForensicsGame/src/Frontend/Main.html
@@ -1,27 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-    background-color: #92a8d1;
-}
-.h1 {
-    text-align: center;
-    padding: 200px 0;
-    text-transform: uppercase;
-    font-size:50px;
-}
-.button {
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-</style>
+
+<link rel="stylesheet" type="text/css" href="Style.css">
+
+
 <body>
 
 <p><div class="h1"><b>Digital Forensics Game</b></p>
@@ -32,9 +15,11 @@ body {
 </button>
 </a>
 </p>
+</div>
+
 
 <p>
-<label for="scenario1">Play scenario 1</label>
+<label for="scenario1"><h2>Play scenario 1</h2></label>
 <a href="Scenario1.html">
 <button class="button" id="scenario1" style="background-color: #8FBF77";>Play
 </button>
@@ -48,12 +33,15 @@ body {
 </a>
 </p>
 
+
+
 <p>
 <a href="Join.html">
 <button class="button" style="background-color: #E89042";>Join Game
 </button>
 </a>
 </p>
+
 
 </body>
 </head>
