--- a/DigitalForensicsGame/src/Frontend/Start.html
+++ b/DigitalForensicsGame/src/Frontend/Start.html
@@ -1,28 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-    background-color: #92a8d1;
-}
-.h1 {
-    text-align: center;
-    padding: 200px 0;
-    text-transform: uppercase;
-    font-size:50px;
-}
-.button {
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-</style>
-</style>
+<link rel="stylesheet" type="text/css" href="Style.css">
+
 <body>
 
 <p><div id="h1"><b>Start Game</b></div></p>
