Main page change colour.

--- a/DigitalForensicsGame/src/Frontend/Main.html
+++ b/DigitalForensicsGame/src/Frontend/Main.html
@@ -3,9 +3,10 @@
 <head>
 <style>
 body {
-    background-color: #92a8d1;
+    background-color: black;
 }
 .h1 {
+    color: white;
     text-align: center;
     padding: 200px 0;
     text-transform: uppercase;
@@ -24,7 +25,7 @@ body {
 </style>
 <body>
 
-<p><div class="h1"><b>Digital Forensics Game</b></p>
+<p><div class="h1"><b>Digital <span style="color:red">Forensics</span> Detective</b></p>
 
 <p>
 <label for="players">Players</label>
