added play folder

--- a/DigitalForensicsGame/src/Frontend/client/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index.html
@@ -50,7 +50,7 @@ body {
 </p>
 
 <p>
-<a href="Join.html">
+<a href="/play/">
 <button class="button" style="background-color: #E89042";>Join Game
 </button>
 </a>
