About button added

--- a/DigitalForensicsGame/src/Frontend/client/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index.html
@@ -28,13 +28,6 @@ body {
 <p><div class="h1"><b>Digital <span style="color:red">Forensics</span> Detective</b></p>
 
 <p>
-<label for="players">Players</label>
-<input type="text" id="players" style="background-color: #FFFFFF";>
-</button>
-</a>
-</p>
-
-<p>
 <label for="scenario1">Play scenario 1</label>
 <a href="Scenario1.html">
 <button class="button" id="scenario1" style="background-color: #8FBF77";>Play
@@ -52,6 +45,13 @@ body {
 <p>
 <a href="/play/">
 <button class="button" style="background-color: #E89042";>Join Game
+</button>
+</a>
+</p>
+
+<p>
+<a href="/about/">
+<button class="button" style="background-color: #E89042";>About
 </button>
 </a>
 </p>
