--- a/DigitalForensicsGame/src/Frontend/client/play/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/play/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Play Cluedo</title>
+    <title>Digital Forensics Detective</title>
     <script src="/libraries/p5.min.js"></script>
     <script src="/libraries/addons/p5.dom.min.js"></script>
     <script src="/libraries/addons/p5.sound.min.js"></script>
