--- a/DigitalForensicsGame/src/Frontend/client/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index.html
@@ -6,6 +6,7 @@
     	<meta name="description" content="">
     	<title>Digital Forensics Detective</title>
 
+        <!-- Bootstrap Imports --!> 
   	  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -15,20 +16,23 @@
 	</head> 
 <body>
 
-
+    <!-- Navigation Bar --!> 
 	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
  		 <a class="navbar-brand" href="#"><b><span style="color:white">Digital <span style="color:red">Forensics</span> Detective</span></b></a>
-
+        
+        <!-- Button for navbar menu --!>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
  		 </button>
  		 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
    			 <div class="navbar-nav">
+   			    <!-- Toggle modal box for about information --!> 
       			<a data-toggle = "modal" data-target= "#about" class="nav-link"><span style="color:white">About</span></a>
     		</div>
  		 </div>
      </nav>
 
+  <!-- Header --!> 
   <div class="jumbotron">
     <div class="container">
       <h1 class="display-3">Digital Forensics Detective!</h1>
@@ -37,7 +41,7 @@
     </div>
   </div>
 
-
+    <!-- Scenarios --!> 
 	<div class="container">
     	<div class="row">
      	 <div class="col-md-4">
@@ -54,6 +58,7 @@
 	<hr>
 	</div>
 	
+	<!-- Modal box for about --!> 
 	<div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="aboutModal" aria-hidden="true">
   		<div class="modal-dialog modal-dialog-centered" role="document">
    		 <div class="modal-content">
@@ -79,8 +84,8 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
-  </div>
-  </div>
+    </div>
+    </div>
 
 </body>
 
