--- a/DigitalForensicsGame/src/Frontend/client/play/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/play/index.html
@@ -7,7 +7,12 @@
     <script src="/libraries/addons/p5.sound.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
     <script src="client.js"></script>
-    <style> body {padding: 0; margin: 0;} #chat {position: fixed; bottom: 23px; right: 28px; width: 280px;} </style>
+    <style> 
+	body {padding: 0; margin: 0;} 
+	#chat {position: fixed; top: 500px; left: 980px; width: 280px;} 
+	#quit {position: fixed; top: 524px; left: 28px;} 
+	
+	</style>
   </head>
   <body>
   	<div id = "chat">
@@ -16,7 +21,10 @@
   		</div>
   		<input id = "handle" type = "text" placeholder = "Handle" />
   		<input id = "message" type = "text" placeholder = "Message" />
-  		<button id ="send">Send</button>
-  		</div>
+  		<button id = "send" >Send</button>
+  	</div>
+	  	<div id = "quit">
+  		<button  href=".." ;id="quit" >Quit to main menu</button>
+  	</div>
   </body>
 </html>
