Fixed board position and added quit function

--- a/DigitalForensicsGame/src/Frontend/client/play/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/play/index.html
@@ -24,7 +24,8 @@
   		<button id = "send" >Send</button>
   	</div>
 	  	<div id = "quit">
-  		<button  href=".." ;id="quit" >Quit to main menu</button>
+  		<a href="/">&larr; Quit to main menu</a>
   	</div>
+  	
   </body>
 </html>
