-Fixed chat positioning

--- a/DigitalForensicsGame/src/Frontend/client/play/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/play/index.html
@@ -9,7 +9,7 @@
     <script src="client.js"></script>
     <style> 
 	body {padding: 0; margin: 0;} 
-	#chat {position: fixed; top: 500px; left: 980px; width: 280px;} 
+	#chat {position: fixed; bottom: 270px; left: 980px; width: 280px;} 
 	#quit {position: fixed; top: 524px; left: 28px;} 
 	
 	</style>
