--- a/DigitalForensicsGame/src/Frontend/client/play/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/play/index.html
@@ -22,20 +22,19 @@
   		<input id = "first" type = "text" onkeyup = "success()" placeholder = "Name" />
   		<input id = "second" type = "text" onkeyup = "success()" placeholder = "...Enter Message" />
   		<button id ="send" disabled>Send</button>
-  		</div>
+  	</div>
+  	
   	<script type="text/javascript">
-    function success() {
-	 var name = document.getElementById("first").value;
-     var message = document.getElementById("second").value;
+    	function success() {
+	 		var name = document.getElementById("first").value;
+     		var message = document.getElementById("second").value;
 
-	 if (name === "" || message === "") { 
-      document.getElementById('send').disabled = true; 
-   } else { 
-      document.getElementById('send').disabled = false;
-   }
-}
-</script
-  	
-  	
+	 		if (name === "" || message === "") { 
+      			document.getElementById('send').disabled = true; 
+   			} else { 
+      			document.getElementById('send').disabled = false;
+   			}
+		}
+	</script>
   </body>
 </html>
