--- a/DigitalForensicsGame/src/Frontend/client/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index.html
@@ -18,9 +18,15 @@
 
     <!-- Navigation Bar --> 
 	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
- 	<div class="navbar-nav mr-auto"><a class="navbar-brand" href="#"><b><span style="color:white">Digital <span style="color:red">Forensics</span> Detective</span></b></a></div>
-       
-	<div class="navbar-nav ml-auto"><button type="button" class="btn btn-light" data-toggle="modal" data-target="#about">About</button></div>
+ 	<div class="navbar-nav mr-auto">
+ 		<a class="navbar-brand" href=""><b><span style="color:white">Digital <span style="color:red">Forensics</span> Detective</span></b>
+ 		</a>
+ 	</div>  
+	<div class="navbar-nav ml-auto">
+		<button type="button" class="btn btn-light" data-toggle="modal" data-target="#about">About</button></div>
+		&nbsp; &nbsp;
+		<a href="/index/index.html" class="btn btn-light">Index<a>
+	</div>
     </nav>
 
   <!-- Header --> 
