Added play button

--- a/DigitalForensicsGame/src/Frontend/client/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index.html
@@ -23,9 +23,11 @@
  		</a>
  	</div>  
 	<div class="navbar-nav ml-auto">
-		<button type="button" class="btn btn-light" data-toggle="modal" data-target="#about">About</button></div>
+		<a href="/" class="btn btn-light">Play<a>
 		&nbsp; &nbsp;
 		<a href="/index/index.html" class="btn btn-light">Index<a>
+		&nbsp; &nbsp;
+		<button type="button" class="btn btn-light" data-toggle="modal" data-target="#about">About</button>
 	</div>
     </nav>
 
