About location change

--- a/DigitalForensicsGame/src/Frontend/client/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index.html
@@ -27,7 +27,7 @@
 		&nbsp; &nbsp;
 		<a href="/index/index.html" class="btn btn-light">Index<a>
 		&nbsp; &nbsp;
-		<button type="button" class="btn btn-light" data-toggle="modal" data-target="#about">About</button>
+		<a href="/About.html" class="btn btn-light">About<a>
 	</div>
     </nav>
 
@@ -61,38 +61,6 @@
       </div>
 	<hr>
 	</div>
-	
-	<!-- Modal box for about --> 
-	<div class="modal fade" id="about" role="dialog">
-  		<div class="modal-dialog">
-   		 <div class="modal-content">
-     		 <div class="modal-header">
-      		 <h5 class="modal-title" id="aboutModal">About</h5>
-        	<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-         	 	<span aria-hidden="true">&ring;</span>
-        	</button>
-     	 	</div>
-      			<div class="modal-body">
-				<p>
-        		A Gamemaster sets the scenario and the users load in to the game server side using any web browser. 
-				The scenario includes the attacker who did the crime, the type of attack they used and the room they did it in.
-
-				The players roll the dice to acquire move points.
-
-				Using move points, players can make moves such as traversing the board, (accompany this point with an image of compass?) untampering hardware, making guesses/ accusations and revealing other players cards.
-
-				During gameplay, a player may encounter a random event. Random events enable the user to gain information about the crime and learn about digital forensics.
-
-				The first player to correctly make an accusation of the details of the crime wins the game.
-				</p>
-
-      			</div>
-      	<div class="modal-footer">
-        <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
-     	</div>
-    </div>
-    </div>
-    </div>
 
 </body>
 
