--- a/DigitalForensicsGame/src/Frontend/client/index/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation Bar --> 
 	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
  	<div class="navbar-nav mr-auto">
- 		<a class="navbar-brand" href=""><b><span style="color:white">Digital <span style="color:red">Forensics</span> Detective</span></b>
+ 		<a class="navbar-brand" href="/"><b><span style="color:white">Digital <span style="color:red">Forensics</span> Detective</span></b>
  		</a>
  	</div>  
 	<div class="navbar-nav ml-auto">
