--- a/DigitalForensicsGame/src/Frontend/client/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index.html
@@ -27,7 +27,7 @@
 		&nbsp; &nbsp;
 		<a href="/index/index.html" class="btn btn-light">Index<a>
 		&nbsp; &nbsp;
-		<div class="navbar-nav ml-auto"><a <button type="button" class="btn btn-light" href="about.html">About</button></a></div>
+		<a href="About.html" class="btn btn-light">About<a>
 	</div>
     </nav>
 
