--- a/DigitalForensicsGame/src/Frontend/client/about.html
+++ b/DigitalForensicsGame/src/Frontend/client/about.html
@@ -18,11 +18,21 @@
 	</head> 
 <body>
 
-    <!-- Navigation Bar --> 
+       <!-- Navigation Bar --> 
 	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
- 	<div class="navbar-nav mr-auto"><a class="navbar-brand" href="#"><b><span style="color:white">Digital <span style="color:red">Forensics</span> Detective</span></b></a></div>
-       
-	
+ 	<div class="navbar-nav mr-auto">
+ 		<a class="navbar-brand" href="/"><b><span style="color:white">Digital <span style="color:red">Forensics</span> Detective</span></b>
+ 		</a>
+ 	</div>  
+	<div class="navbar-nav ml-auto">
+		<a href="/" class="btn btn-light">Play<a>
+		&nbsp; &nbsp;
+		<a href="/index/index.html" class="btn btn-light">Index<a>
+		&nbsp; &nbsp;
+		<a href="About.html" class="btn btn-light">About<a>
+	</div>
+    </nav>
+      
     </nav>
 
   <!-- Header --> 
