--- a/DigitalForensicsGame/src/Frontend/client/index/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index/index.html
@@ -80,7 +80,7 @@
 	    <th>Best Work</th>
 	  </tr>
 	  <tr>
-	    <th colspan="5" bgcolor=#343a40 style="text-align:center;color:white" >Preperation</th>
+	    <th colspan="5" bgcolor=#343a40 style="text-align:center;color:white" >Preparation</th>
 	  </tr>
 	  <tr>
 	    <td>PRE.1.</td>
@@ -91,16 +91,86 @@
 	  </tr>
 	  <tr>
 	    <td>PRE.2.</td>
-	    <td></td>
-	    <td></td>
-	    <td>27/03/2019</td>
+	    <td><a href="https://docs.google.com/document/d/15H6wVPjvvWkRC45I3meLaG2me1pCCp9TslkrkTZlvKY/edit">Use cases</a></td>
+	    <td>tg252</td>
+	    <td>24/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.3.</td>
+	    <td><a href="https://docs.google.com/presentation/d/1VFBBTO3I307TRVeR0fUHljMtpxeCORs38rog2-XXzC4/edit#slide=id.g47bba9e6b1_1_0">Design mockups</a></td>
+	    <td>tg252, sr574, gaa21</td>
+	    <td>24/10/2018</td>
 	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.4.</td>
+	    <td><a href = "https://docs.google.com/document/d/1iSGsAFuOWciWdWeIy9BTnkI4R48rpr9hAvOcezcxTsE/edit">Project description</a></td>
+	    <td>gaa21, tg252</td>
+	    <td>10/10/2018</td>
 	    <td></td>
-	    <td>27/03/2019</td>
+	  </tr>
+	  <tr>
+	    <td>PRE.5.</td>
+	    <td><a href="https://docs.google.com/presentation/d/1rRI6a0UfxAIFKSirUc0VdBWiyAqAGaBG3B-5AVCqmV0/edit#slide=id.p"> University scenario mockup</td>
+	    <td>tg252</td>
+	    <td>31/10/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.6.</td>
+	    <td><a href="https://drive.google.com/open?id=1zzo1WMjNWv_4KcrxX-XXgRJi0lU7oX66">Class Diagrams</td>
+	    <td>lds29, gaa21</td>
+	    <td>14/11/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.7.</td>
+	    <td><a href="https://docs.google.com/spreadsheets/d/13Ba83cJI7c4eQNmPedZD3t4JqWqWMjIvO1osT_QfP9w/edit#gid=483565572">Board design</td>
+	    <td>lds29</td>
+	    <td>14/11/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.8.</td>
+	    <td><a href="https://docs.google.com/document/d/1l5DwP1asHz2GGlSt3HZWm4Hi3rvzvR__OFo84VhxiQo/edit">Game rules</td>
+	    <td>gaa21, lds29, tg252</td>
+	    <td>3/12/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.9.</td>
+	    <td><a href="https://docs.google.com/presentation/d/1LQx3fVEFdrekgbH3MONiczrFjFihNCHUyHO53Wt78QY/edit#slide=id.g46780347d6_0_1037">Digital Forensics Game Design</td>
+	    <td>sr574, tg252</td>
+	    <td>28/10/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.10.</td>
+	    <td><a href="https://docs.google.com/document/d/1TEtLK5NomFQ48evTzJ-_o_iiVpsMJwdrAAoi6JsGsZM/edit">Game scenario example</td>
+	    <td>sr574, tg252</td>
+	    <td>31/10/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.11.</td>
+	    <td><a href="https://docs.google.com/spreadsheets/d/10Dlskt-D55VlGQ0Zm2Ijsf-QUVR8dkWg8GMbYToo418/edit?usp=drive_web&ouid=107225548819757120226">GANTT chart</td>
+	    <td>Everyone</td>
+	    <td>10/10/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.12.</td>
+	    <td><a href="https://docs.google.com/document/d/1P_SfmIkwXfYboNYezqk7VXzXwZfIBnIf5Ar7Q6yjvw4/edit">Programming task list</td>
+	    <td>lds29</td>
+	    <td>4/12/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
+	    <td>PRE.13.</td>
+	    <td><a href="https://docs.google.com/spreadsheets/d/1MTufVebVPupCDsfi5M3ns7VZ87tzi_U5ggA0RrUqrdo/edit#gid=1827724839">Risk analysis</td>
+	    <td>sr574</td>
+	    <td>3/12/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
@@ -133,14 +203,14 @@
 	  <tr>
 	    <td>IT1.1.</td>
 	    <td><a href="https://drive.google.com/open?id=1zzo1WMjNWv_4KcrxX-XXgRJi0lU7oX66">Class Diagram</a></td>
-	    <td></td>
+	    <td>lds29, gaa21</td>
 	    <td>14/11/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>IT1.2.</td>
-	    <td></td>
-	    <td></td>
+	    <td><a href="https://docs.google.com/spreadsheets/d/1ge6TSCZv9G8p6yNRVUAnGiRObgXoIEEoCKHgVBhwDn0/edit#gid=851164096">Testing</a></td>
+	    <td>lds29, tg252</td>
 	    <td>27/03/2019</td>
 	    <td></td>
 	  </tr>
@@ -156,7 +226,7 @@
 	  <tr>
 	    <td>IT2.1.</td>
 	    <td><a href="https://drive.google.com/open?id=1zzo1WMjNWv_4KcrxX-XXgRJi0lU7oX66">Class Diagram</td>
-	    <td></td>
+	    <td>lds29, gaa21</td>
 	    <td>14/11/2018</td>
 	    <td>*</td>
 	  </tr>
@@ -178,9 +248,9 @@
 	  </tr>
 	  <tr>
 	    <td>MIN.1.</td>
-	    <td></td>
-	    <td></td>
-	    <td>27/03/2019</td>
+	    <td><a href="https://docs.google.com/document/d/1wrnhN9efwk7x9vMtPSYM8H2nmkmUciDH-VtqPVXVtqY/edit">Meeting minutes</td>
+	    <td>Everyone</td>
+	    <td>10/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <th colspan="5" bgcolor=#343a40 style="text-align:center;color:white" >Deliverables</th>
