--- a/DigitalForensicsGame/src/Frontend/client/index/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index/index.html
@@ -174,6 +174,13 @@
 	    <td></td>
 	  </tr>
 	  <tr>
+	    <td>PRE.14.</td>
+	    <td><a href="https://docs.google.com/document/d/11QiQ9PI25LPaJOuL06XEnoq8vVUuyig8KQ0ZcWKymU0/edit">User stories</td>
+	    <td>tg252</td>
+	    <td>11/11/2018</td>
+	    <td></td>
+	  </tr>
+	  <tr>
 	    <th colspan="5" bgcolor=#343a40 style="text-align:center;color:white" >Research</th>
 	  </tr>
 	  <tr>
