Updated index for pdfs. Removed index from the game

--- a/DigitalForensicsGame/src/Frontend/client/index/index.html
+++ b/DigitalForensicsGame/src/Frontend/client/index/index.html
@@ -34,8 +34,6 @@
 	<div class="navbar-nav ml-auto">
 		<a href="/" class="btn btn-light">Play<a>
 		&nbsp; &nbsp;
-		<a href="/index/index.html" class="btn btn-light">Index<a>
-		&nbsp; &nbsp;
 		<button type="button" class="btn btn-light" data-toggle="modal" data-target="#about">About</button></div>
 	</div>
     </nav>
@@ -84,91 +82,91 @@
 	  </tr>
 	  <tr>
 	    <td>PRE.1.</td>
-	    <td><a href="https://docs.google.com/document/d/188emsQal2OhwT-dMnAjcsrRXmjmGZbVS-hf9O9MhfEY/">Project Scope</a></td>
+	    <td><a href="DFD.pdf">Project Scope</a></td>
 	    <td>sr574</td>
 	    <td>17/10/2018</td>
 	    <td>*</td>
 	  </tr>
 	  <tr>
 	    <td>PRE.2.</td>
-	    <td><a href="https://docs.google.com/document/d/15H6wVPjvvWkRC45I3meLaG2me1pCCp9TslkrkTZlvKY/edit">Use cases</a></td>
+	    <td><a href="Use Cases.pdf">Use cases</a></td>
 	    <td>tg252</td>
 	    <td>24/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.3.</td>
-	    <td><a href="https://docs.google.com/presentation/d/1VFBBTO3I307TRVeR0fUHljMtpxeCORs38rog2-XXzC4/edit#slide=id.g47bba9e6b1_1_0">Design mockups</a></td>
+	    <td><a href="Design mockups.pdf">Design mockups</a></td>
 	    <td>tg252, sr574, gaa21</td>
 	    <td>24/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.4.</td>
-	    <td><a href = "https://docs.google.com/document/d/1iSGsAFuOWciWdWeIy9BTnkI4R48rpr9hAvOcezcxTsE/edit">Project description</a></td>
+	    <td><a href = "Project description.pdf">Project description</a></td>
 	    <td>gaa21, tg252</td>
 	    <td>10/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.5.</td>
-	    <td><a href="https://docs.google.com/presentation/d/1rRI6a0UfxAIFKSirUc0VdBWiyAqAGaBG3B-5AVCqmV0/edit#slide=id.p"> University scenario mockup</td>
+	    <td><a href="University scenario mockup.pdf"> University scenario mockup</td>
 	    <td>tg252</td>
 	    <td>31/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.6.</td>
-	    <td><a href="https://drive.google.com/open?id=1zzo1WMjNWv_4KcrxX-XXgRJi0lU7oX66">Class Diagrams</td>
+	    <td><a href="Class Diagrams.pdf">Class Diagrams</td>
 	    <td>lds29, gaa21</td>
 	    <td>14/11/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.7.</td>
-	    <td><a href="https://docs.google.com/spreadsheets/d/13Ba83cJI7c4eQNmPedZD3t4JqWqWMjIvO1osT_QfP9w/edit#gid=483565572">Board design</td>
+	    <td><a href="Board design.pdf">Board design</td>
 	    <td>lds29</td>
 	    <td>14/11/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.8.</td>
-	    <td><a href="https://docs.google.com/document/d/1l5DwP1asHz2GGlSt3HZWm4Hi3rvzvR__OFo84VhxiQo/edit">Game rules</td>
+	    <td><a href="Game rules.pdf">Game rules</td>
 	    <td>gaa21, lds29, tg252</td>
 	    <td>3/12/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.9.</td>
-	    <td><a href="https://docs.google.com/presentation/d/1LQx3fVEFdrekgbH3MONiczrFjFihNCHUyHO53Wt78QY/edit#slide=id.g46780347d6_0_1037">Digital Forensics Game Design</td>
+	    <td><a href="Forensics Game Design.pdf">Digital Forensics Game Design</td>
 	    <td>sr574, tg252</td>
 	    <td>28/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.10.</td>
-	    <td><a href="https://docs.google.com/document/d/1TEtLK5NomFQ48evTzJ-_o_iiVpsMJwdrAAoi6JsGsZM/edit">Game scenario example</td>
+	    <td><a href="Game scenario example.pdf">Game scenario example</td>
 	    <td>sr574, tg252</td>
 	    <td>31/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.11.</td>
-	    <td><a href="https://docs.google.com/spreadsheets/d/10Dlskt-D55VlGQ0Zm2Ijsf-QUVR8dkWg8GMbYToo418/edit?usp=drive_web&ouid=107225548819757120226">GANTT chart</td>
+	    <td><a href="GANTT chart.pdf">GANTT chart</td>
 	    <td>Everyone</td>
 	    <td>10/10/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.12.</td>
-	    <td><a href="https://docs.google.com/document/d/1P_SfmIkwXfYboNYezqk7VXzXwZfIBnIf5Ar7Q6yjvw4/edit">Programming task list</td>
+	    <td><a href="Programming task list.pdf">Programming task list</td>
 	    <td>lds29</td>
 	    <td>4/12/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>PRE.13.</td>
-	    <td><a href="https://docs.google.com/spreadsheets/d/1MTufVebVPupCDsfi5M3ns7VZ87tzi_U5ggA0RrUqrdo/edit#gid=1827724839">Risk analysis</td>
+	    <td><a href="Risk analysis.pdf">Risk analysis</td>
 	    <td>sr574</td>
 	    <td>3/12/2018</td>
 	    <td></td>
@@ -202,14 +200,14 @@
 	  </tr>
 	  <tr>
 	    <td>IT1.1.</td>
-	    <td><a href="https://drive.google.com/open?id=1zzo1WMjNWv_4KcrxX-XXgRJi0lU7oX66">Class Diagram</a></td>
+	    <td><a href="Class Diagram.pdf">Class Diagram</a></td>
 	    <td>lds29, gaa21</td>
 	    <td>14/11/2018</td>
 	    <td></td>
 	  </tr>
 	  <tr>
 	    <td>IT1.2.</td>
-	    <td><a href="https://docs.google.com/spreadsheets/d/1ge6TSCZv9G8p6yNRVUAnGiRObgXoIEEoCKHgVBhwDn0/edit#gid=851164096">Testing</a></td>
+	    <td><a href="testing.pdf">Testing</a></td>
 	    <td>lds29, tg252</td>
 	    <td>27/03/2019</td>
 	    <td></td>
@@ -225,7 +223,7 @@
 	  </tr>
 	  <tr>
 	    <td>IT2.1.</td>
-	    <td><a href="https://drive.google.com/open?id=1zzo1WMjNWv_4KcrxX-XXgRJi0lU7oX66">Class Diagram</td>
+	    <td><a href="Class diagram">Class Diagram</td>
 	    <td>lds29, gaa21</td>
 	    <td>14/11/2018</td>
 	    <td>*</td>
@@ -248,7 +246,7 @@
 	  </tr>
 	  <tr>
 	    <td>MIN.1.</td>
-	    <td><a href="https://docs.google.com/document/d/1wrnhN9efwk7x9vMtPSYM8H2nmkmUciDH-VtqPVXVtqY/edit">Meeting minutes</td>
+	    <td><a href="Meeting minutes.pdf">Meeting minutes</td>
 	    <td>Everyone</td>
 	    <td>10/10/2018</td>
 	    <td></td>
